cmake_minimum_required(VERSION 3.31)
project(Halbaddierer)

set(CMAKE_CXX_STANDARD 20)

add_executable(Halbaddierer cmake-build-debug/src/main.cpp
        cmake-build-debug/src/Input_Output/Bit.cpp
        cmake-build-debug/src/Input_Output/Bit.h
        cmake-build-debug/src/Gates/Gate.cpp
        cmake-build-debug/src/Gates/Gate.h
        cmake-build-debug/src/Input_Output/OneInput.cpp
        cmake-build-debug/src/Input_Output/OneInput.h
        cmake-build-debug/src/Input_Output/TwoInput.cpp
        cmake-build-debug/src/Input_Output/TwoInput.h
        cmake-build-debug/src/Gates/And.cpp
        cmake-build-debug/src/Gates/And.h
        cmake-build-debug/src/Gates/Xor.cpp
        cmake-build-debug/src/Gates/Xor.h
        cmake-build-debug/src/Gates/Not.cpp
        cmake-build-debug/src/Gates/Not.h
        cmake-build-debug/src/Adder/HalfAdder.cpp
        cmake-build-debug/src/Adder/HalfAdder.h
        cmake-build-debug/src/Gates/Or.cpp
        cmake-build-debug/src/Gates/Or.h
        cmake-build-debug/src/Adder/FullAdder.cpp
        cmake-build-debug/src/Adder/FullAdder.h
        cmake-build-debug/src/Adder/FullAdder4.cpp
        cmake-build-debug/src/Adder/FullAdder4.h
        cmake-build-debug/src/Adder/FullAdder8.cpp
        cmake-build-debug/src/Adder/FullAdder8.h
        cmake-build-debug/src/Adder/FullAdder16.cpp
        cmake-build-debug/src/Adder/FullAdder16.h
        cmake-build-debug/src/Adder/FullAdderN.cpp
        cmake-build-debug/src/Adder/FullAdderN.h
        cmake-build-debug/src/ALU/Add16.cpp
        cmake-build-debug/src/ALU/Add16.h
        cmake-build-debug/src/ALU/ALU.cpp
        cmake-build-debug/src/ALU/ALU.h
        cmake-build-debug/src/ALU/And16Bitwise.cpp
        cmake-build-debug/src/ALU/And16Bitwise.h
        cmake-build-debug/src/ALU/ArithmeticUnit.cpp
        cmake-build-debug/src/ALU/ArithmeticUnit.h
        cmake-build-debug/src/ALU/LogicalUnit.cpp
        cmake-build-debug/src/ALU/LogicalUnit.h
        cmake-build-debug/src/ALU/Not16Bitwise.cpp
        cmake-build-debug/src/ALU/Not16Bitwise.h
        cmake-build-debug/src/ALU/Or16Bitwise.cpp
        cmake-build-debug/src/ALU/Or16Bitwise.h
        cmake-build-debug/src/ALU/Sub16.cpp
        cmake-build-debug/src/ALU/Sub16.h
        cmake-build-debug/src/ALU/Xor16Bitwise.cpp
        cmake-build-debug/src/ALU/Xor16Bitwise.h
        cmake-build-debug/src/CPU/CPU.cpp
        cmake-build-debug/src/CPU/CPU.h
        cmake-build-debug/src/CPU_Components/IR.cpp
        cmake-build-debug/src/CPU_Components/IR.h
        cmake-build-debug/src/CPU_Components/PC.cpp
        cmake-build-debug/src/CPU_Components/PC.h
        cmake-build-debug/src/CPU_Components/RegisterFile.cpp
        cmake-build-debug/src/CPU_Components/RegisterFile.h
        cmake-build-debug/src/Gates/And_16.cpp
        cmake-build-debug/src/Gates/And_16.h
        cmake-build-debug/src/Gates/Not_16.cpp
        cmake-build-debug/src/Gates/Not_16.h
        cmake-build-debug/src/Gates/Or_16.cpp
        cmake-build-debug/src/Gates/Or_16.h
        cmake-build-debug/src/Gates/Xor_16.cpp
        cmake-build-debug/src/Gates/Xor_16.h
        cmake-build-debug/src/Input_Output/Conversion.cpp
        cmake-build-debug/src/Input_Output/Conversion.h
        cmake-build-debug/src/Input_Output/Input.cpp
        cmake-build-debug/src/Input_Output/Input.h
        cmake-build-debug/src/Input_Output/Output.cpp
        cmake-build-debug/src/Input_Output/Output.h
        cmake-build-debug/src/Memory/Memory.cpp
        cmake-build-debug/src/Memory/Memory.h
        cmake-build-debug/src/Subtractors/FullSubtractor.cpp
        cmake-build-debug/src/Subtractors/FullSubtractor.h
        cmake-build-debug/src/Subtractors/FullSubtractor16.cpp
        cmake-build-debug/src/Subtractors/FullSubtractor16.h
        cmake-build-debug/src/Subtractors/HalfSubtractor.cpp
        cmake-build-debug/src/Subtractors/HalfSubtractor.h)
